---
source: kcl/src/parsing/parser.rs
assertion_line: 3893
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declarations": [
        {
          "end": 143,
          "id": {
            "end": 15,
            "name": "boxSketch",
            "start": 6,
            "type": "Identifier"
          },
          "init": {
            "body": [
              {
                "arguments": [
                  {
                    "elements": [
                      {
                        "end": 34,
                        "raw": "0",
                        "start": 33,
                        "type": "Literal",
                        "type": "Literal",
                        "value": 0.0
                      },
                      {
                        "end": 37,
                        "raw": "0",
                        "start": 36,
                        "type": "Literal",
                        "type": "Literal",
                        "value": 0.0
                      }
                    ],
                    "end": 38,
                    "start": 32,
                    "type": "ArrayExpression",
                    "type": "ArrayExpression"
                  }
                ],
                "callee": {
                  "end": 31,
                  "name": "startSketchAt",
                  "start": 18,
                  "type": "Identifier"
                },
                "end": 39,
                "start": 18,
                "type": "CallExpression",
                "type": "CallExpression"
              },
              {
                "arguments": [
                  {
                    "elements": [
                      {
                        "end": 54,
                        "raw": "0",
                        "start": 53,
                        "type": "Literal",
                        "type": "Literal",
                        "value": 0.0
                      },
                      {
                        "end": 58,
                        "raw": "10",
                        "start": 56,
                        "type": "Literal",
                        "type": "Literal",
                        "value": 10.0
                      }
                    ],
                    "end": 59,
                    "start": 52,
                    "type": "ArrayExpression",
                    "type": "ArrayExpression"
                  },
                  {
                    "end": 62,
                    "start": 61,
                    "type": "PipeSubstitution",
                    "type": "PipeSubstitution"
                  }
                ],
                "callee": {
                  "end": 51,
                  "name": "line",
                  "start": 47,
                  "type": "Identifier"
                },
                "end": 63,
                "start": 47,
                "type": "CallExpression",
                "type": "CallExpression"
              },
              {
                "arguments": [
                  {
                    "elements": [
                      {
                        "argument": {
                          "end": 88,
                          "raw": "5",
                          "start": 87,
                          "type": "Literal",
                          "type": "Literal",
                          "value": 5.0
                        },
                        "end": 88,
                        "operator": "-",
                        "start": 86,
                        "type": "UnaryExpression",
                        "type": "UnaryExpression"
                      },
                      {
                        "end": 91,
                        "raw": "5",
                        "start": 90,
                        "type": "Literal",
                        "type": "Literal",
                        "value": 5.0
                      }
                    ],
                    "end": 92,
                    "start": 85,
                    "type": "ArrayExpression",
                    "type": "ArrayExpression"
                  },
                  {
                    "end": 95,
                    "start": 94,
                    "type": "PipeSubstitution",
                    "type": "PipeSubstitution"
                  }
                ],
                "callee": {
                  "end": 84,
                  "name": "tangentialArc",
                  "start": 71,
                  "type": "Identifier"
                },
                "end": 96,
                "start": 71,
                "type": "CallExpression",
                "type": "CallExpression"
              },
              {
                "arguments": [
                  {
                    "elements": [
                      {
                        "end": 111,
                        "raw": "5",
                        "start": 110,
                        "type": "Literal",
                        "type": "Literal",
                        "value": 5.0
                      },
                      {
                        "argument": {
                          "end": 116,
                          "raw": "15",
                          "start": 114,
                          "type": "Literal",
                          "type": "Literal",
                          "value": 15.0
                        },
                        "end": 116,
                        "operator": "-",
                        "start": 113,
                        "type": "UnaryExpression",
                        "type": "UnaryExpression"
                      }
                    ],
                    "end": 117,
                    "start": 109,
                    "type": "ArrayExpression",
                    "type": "ArrayExpression"
                  },
                  {
                    "end": 120,
                    "start": 119,
                    "type": "PipeSubstitution",
                    "type": "PipeSubstitution"
                  }
                ],
                "callee": {
                  "end": 108,
                  "name": "line",
                  "start": 104,
                  "type": "Identifier"
                },
                "end": 121,
                "start": 104,
                "type": "CallExpression",
                "type": "CallExpression"
              },
              {
                "arguments": [
                  {
                    "end": 139,
                    "raw": "10",
                    "start": 137,
                    "type": "Literal",
                    "type": "Literal",
                    "value": 10.0
                  },
                  {
                    "end": 142,
                    "start": 141,
                    "type": "PipeSubstitution",
                    "type": "PipeSubstitution"
                  }
                ],
                "callee": {
                  "end": 136,
                  "name": "extrude",
                  "start": 129,
                  "type": "Identifier"
                },
                "end": 143,
                "start": 129,
                "type": "CallExpression",
                "type": "CallExpression"
              }
            ],
            "end": 143,
            "start": 18,
            "type": "PipeExpression",
            "type": "PipeExpression"
          },
          "start": 6,
          "type": "VariableDeclarator"
        }
      ],
      "end": 143,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 144,
  "start": 0
}
